--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,12 +1,16 @@
 source 'https://github.com/CocoaPods/Specs.git'
 use_frameworks!
 
+xcodeproj 'Recast.AI.xcodeproj'
+
 target 'Recast.AI_Example', :exclusive => true do
   pod 'Recast.AI', :path => '../'
+  pod 'SwiftHTTP'
+  pod 'JSONJoy'
 end
 
 target 'Recast.AI_Tests', :exclusive => true do
   pod 'Recast.AI', :path => '../'
-
-  
+  pod 'SwiftHTTP'
+  pod 'JSONJoy'
 end
