--- a/Example/Podfile
+++ b/Example/Podfile
@@ -5,8 +5,9 @@ xcodeproj 'RecastAI.xcodeproj'
 
 target 'RecastAI_Example', :exclusive => true do
   pod 'RecastAI', :path => '../'
-  pod 'SwiftHTTP'
   pod 'JSONJoy-Swift'
+  pod 'SwiftWebSocket'
+  pod 'Alamofire'
 end
 
 target 'RecastAI_Tests', :exclusive => true do
